feat: automatic sprints
